feat: update single-variable-differential-calculus notes

--- a/math/advanced-mathematics/foundations/inequality.tex
+++ b/math/advanced-mathematics/foundations/inequality.tex
@@ -146,6 +146,9 @@
             x,
             \quad x>0.
         \]
+        \begin{analysisbox}[证明]
+            令$f(t) = \ln t$，在$[x, 1+x]$用拉格朗日中值定理
+        \end{analysisbox}
     \end{enumerate}
 
     \subsection{方法步骤}
