--- a/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
@@ -253,6 +253,16 @@
 
     \begin{enumerate}
         \item 若$\lim \displaystyle\frac{f(x)}{g(x)} = A$，且$\lim g(x) = 0$，则$\lim f(x) = 0$
+        \begin{analysisbox}[Example]
+            \[
+                \begin{aligned}
+                    \lim_{x \to 0} \frac{f(x)}{x} \ \text{存在}
+                    &\;\Longrightarrow\; \lim_{x \to 0} f(x) = 0, \\
+                    &\text{若 } f(x) \text{ 在 } x=0 \text{ 处连续，则 } f(0)=0.
+                \end{aligned}
+            \]
+        \end{analysisbox}
+
         \item 若$\lim \displaystyle\frac{f(x)}{g(x)} = A \neq 0$，且$\lim f(x) = 0$，则$\lim g(x) = 0$
         \item （连续型）当 $x\to+\infty$ 时，
         \[
