--- a/math/advanced-mathematics/single-variable_differential_calculus/geometric_application.tex
+++ b/math/advanced-mathematics/single-variable_differential_calculus/geometric_application.tex
@@ -58,7 +58,10 @@ minimum width=4cm, minimum height=1.5cm, draw=black]
 \setlist[circlenum]{
     label=\ding{\numexpr171+\arabic*},
     leftmargin=2.2em,
-    itemsep=0.4em
+    itemsep=0.6em,      % item 之间的距离（主要）
+    topsep=0.6em,       % 列表与上下正文的距离
+    parsep=0.3em,       % item 内段落的间距
+    partopsep=0.3em     % 列表前后额外间距
 }
 
 % =========================
@@ -605,38 +608,10 @@ minimum width=4cm, minimum height=1.5cm, draw=black]
         \item 如果 $f(x)$ 在区间$I$上有最值点 $x_0$，并且此最值点 $x_0$ 不是区间 $I$ 的端点而是$I$内部的点，那么此 $x_0$必是$f(x)$的一个极值点
     \end{enumerate}
 
-    \subsection{定理}
-
-    \begin{enumerate}
-    \end{enumerate}
-
-    \subsection{运算}
-
-    \begin{enumerate}
-
-    \end{enumerate}
-
-    \subsection{公式}
-
-    \begin{enumerate}
-
-    \end{enumerate}
-
-    \subsection{方法总结}
-
-    \begin{enumerate}
-    \end{enumerate}
-
     \subsection{条件转换思路}
 
     \begin{enumerate}
         \item $f(x)\cdot f'(x)$ => $\{[f(x)]^2\}' = 2f(x) \cdot f'(x)$
-
-    \end{enumerate}
-
-    \subsection{理解}
-
-    \begin{enumerate}
     \end{enumerate}
 
 \end{document}
