--- a/math/advanced-mathematics/single-variable_differential_calculus/physical_and_economic_applications.tex
+++ b/math/advanced-mathematics/single-variable_differential_calculus/physical_and_economic_applications.tex
@@ -13,6 +13,8 @@
 \usepackage{xstring}
 \usepackage{pgfplots}
 \usepackage{enumitem}
+\usepackage{pifont}
+\usepackage{ulem}
 \pgfplotsset{compat=1.18}
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm}
 
@@ -35,6 +37,18 @@
     top=4pt,
     bottom=4pt
 }
+
+\newlist{circlenum}{enumerate}{1}
+\setlist[circlenum]{
+    label=\ding{\numexpr171+\arabic*},
+    leftmargin=2.2em,
+    itemsep=0.6em,      % item 之间的距离（主要）
+    topsep=0.6em,       % 列表与上下正文的距离
+    parsep=0.3em,       % item 内段落的间距
+    partopsep=0.3em     % 列表前后额外间距
+}
+
+\newcommand{\blueuline}[1]{{\color{blue}\uline{\color{black}{#1}}}}
 
 % =========================
 % 字体设置
@@ -66,9 +80,67 @@
 
     \section{一元函数微分学的应用 - 物理应用与经济应用}
 
-    \subsection{基础概念}
+    \subsection{物理应用}
+
+    相关物理概念
+    \begin{enumerate}
+        \item 速度：位移对时间的变化率
+        \item 加速度：速度对时间的变化率
+        \item 牛顿第二定律（$F = ma$)
+    \end{enumerate}
+    \begin{analysisbox}[Example]
+        已知质点运动的位移 $s$ 关于时间 $t$ 的函数为$s = s(t)$，称其为质点的运动方程（位移方程），则质点的速度为
+        \[
+            v(t)
+            = \lim_{\Delta t \to 0} \frac{\Delta s}{\Delta t}
+            = \frac{\mathrm{d}s}{\mathrm{d}t}
+            = s'(t).
+        \]
+
+        其加速度为
+        \[
+            a(t)
+            = \lim_{\Delta t \to 0} \frac{\Delta v}{\Delta t}
+            = \frac{\mathrm{d}v}{\mathrm{d}t}
+            = v'(t)
+            = s''(t).
+        \]
+
+        此外，由链式法则可得
+        \[
+            a(t)
+            = \frac{\mathrm{d}v}{\mathrm{d}s}\cdot\frac{\mathrm{d}s}{\mathrm{d}t}
+            = v\,\frac{\mathrm{d}v}{\mathrm{d}s}
+            = \frac{d(\displaystyle\frac{ds}{dt})}{dt}
+            = \frac{d^{2}s}{dt^2}
+        \]
+
+    \end{analysisbox}
+
+    \subsection{相关变化率}
+
+    研究 $\displaystyle\frac{dA}{dB} = \displaystyle\frac{dA}{dC}\cdot \displaystyle\frac{dC}{dB}$
 
     \begin{enumerate}
+        \item 若已知$\displaystyle\frac{\mathrm{d}A}{\mathrm{d}B}, \displaystyle\frac{\mathrm{d}C}{\mathrm{d}B}$，则
+        \[
+            \frac{\mathrm{d}A}{\mathrm{d}C} = \frac{\displaystyle\frac{\mathrm{d}A}{\mathrm{d}B}}{\displaystyle\frac{\mathrm{d}C}{\mathrm{d}B}}
+        \]
+        \item 该等式建立了$\displaystyle\frac{\mathrm{d}A}{\mathrm{d}B}$与$\displaystyle\frac{\mathrm{d}C}{\mathrm{d}B}$的关系，其中 $A,B,C$ 可以扩展为许多实际物理量
+        \item 若函数 $y=f(x)$ 由参数方程
+        \[
+            \begin{cases}
+                x = x(t), \\
+                y = y(t),
+            \end{cases}
+        \]
+        所确定，则
+        \[
+            \frac{\mathrm{d}y}{\mathrm{d}t}
+            = \frac{\mathrm{d}y}{\mathrm{d}x}\cdot \frac{\mathrm{d}x}{\mathrm{d}t}.
+            = f'(x)\frac{\mathrm{d}x}{\mathrm{d}t}
+        \]
+        上式时，$\displaystyle\frac{\mathrm{d}y}{\mathrm{d}t}$与$\displaystyle\frac{\mathrm{d}x}{\mathrm{d}t}$由$f'(x)$联系在一起，这种相互关联的变化率称为\textbf{相关变化率}
     \end{enumerate}
 
     \subsection{结论}
@@ -96,6 +168,11 @@
     \subsection{方法总结}
 
     \begin{enumerate}
+        \item 涉及相关变化率问题
+        \begin{circlenum}
+            \item 建立相关变量方程
+            \item 求导找出相关变化率，进而通过已知变化率求未知变化率
+        \end{circlenum}
 
     \end{enumerate}
 
