--- a/english/word/low-frequency/115-118.md
+++ b/english/word/low-frequency/115-118.md
@@ -34,18 +34,20 @@
 - provisional
     - adj. 临时的
     - == temporary
-    - Something provisional is temporary，in the sense that it's only valid for a while.
-- causalty
+    - Something provisional is **temporary**, in the sense that it's only valid for a while.
+- casualty [ˈkæʒuəlti]
     - n. 受害者
-    - Small shops have been a causualty of the recession.
-    - This does not prove <ins>causality.（因果关系）</ins>
-        - cause v. 导致； n. 原因
+    - Small shops have been a **casualty** of the recession.
+    - This does not prove *causality([kɔˈzælɪti] n. 因果关系; 因果性)*.
+        - cause
+            - v. 导致
+            - n. 原因
 - fuse
     - v. （使）融合
 - expedition
     - n. (为特定目的而组织的)旅行
-    - journey
-    - to the west 西游
+    - == journey
+    - journey to the west 西游记 //TODO?
 - insulate
     - vt. 使绝缘
 
@@ -59,22 +61,28 @@
 - scenario
     - n. 设想
 - sway
-    - vt. 影响； v. 摇摆
+    - vt. 影响；
+    - v. 摇摆
     - n. 摇摆，影响
-    - Climate change teaching in some schools can be <ins>swayed (== influenced)</ins> by external forces.
+    - == influenced
+    - Climate change teaching in some schools can be **swayed** by external forces.
 - transport
     - vt. 使产生身临其境的感觉
 - volatile
     - adj. 不稳定
-    - unstable
+    - == unstable
 - vicinity
     - n. 周围地区
-    - There is no hospital <ins>in the immediate vicinity.(== nearby)</ins>
+    - There is no hospital in the immediate **vicinity**.
+        - in the immediate vicinity 在非常近的地方／就在附近
+            - == nearby
 - determinant
     - n. 决定因素
 - dissociate
     - vt. 使脱离
-    - be associate with 与...有关系
+    - associate [əˈsəʊʃieɪt]
+        - v.支持；联想，联系
+        - be associate with 与...有关系
 - gauge
     - n. 测量仪表
     - a gauge of risk 衡量风险的指标
@@ -83,12 +91,14 @@
 
 - overview
     - n. 概述；概观
-    - == summary
+    - == summary [ˈsʌməri]
+        - n. 摘要，概要; 总结，一览
+        - adj. 概括的，总结的; 即刻的，立即的
 - suboptimal
     - adj. 次优的
 - underscore
     - vt. 划线于...下；强调，突出
-    - == underline/underscore the importance
+    - underline/underscore the importance of... 强调...的重要性
 - cumulative
     - adj. 累积的
 - disastrous
@@ -99,13 +109,13 @@
     - n. 湿度；潮湿
 - indignant
     - adj. 愤怒的
-    - Feelings of <ins>righteous (正义的)</ins> indignation,it seems,are not the <ins>preserve (n. 专利)</ins> of people
-      alone.
-    - angry
+    - Feelings of *righteous([ˈraɪtʃəs] adj. 正义的)* indignation, it seems, are not the preserve of people alone.
+        - preserve n. an area, quality, or activity reserved for a particular group
+        - the preserve of 独有/专属
+            - == the exclusive domain of
 - obsolete
     - adj. 废弃的；过时了的
-    - As technology advances and a format becomes obsolete,the object is useless.
-    - out-dated
+    - As technology advances and a format becomes **obsolete**, the object is useless.
 - optional
     - adj. 可以任选的
 
@@ -116,8 +126,9 @@
 - pirate
     - vt. 盗用，非法盗印
     - n. 非法盗印者
-    - But the age of streaming has been a <ins>boom (福音)</ins> for some unintended winners：pirates that use software
-      to rip a film or television show in seconds from legitimate online video platforms...
+    - But the age of streaming has been a <ins>boon([buːn] n. 非常有用的东西; 益处)</ins> for some unintended winners:
+      **pirates** that use software to rip a film or television show in seconds from legitimate online video
+      platforms...
 - pitch
     - vt. 投掷
     - n. 程度
@@ -125,8 +136,8 @@
     - v. 思索，考虑，沉思
 - resilient
     - adj. 有适应力的
-    - Resilience is very different than being numb.Resilience means you experience,you feel you fail,you hurt.You
-      fall.But,you keep going.
+    - **Resilience** is very different than being numb. **Resilience** means you experience, you feel, you fail, you
+      hurt. You fall. But, you keep going.
 - retrieve
     - vt. 取回
 - submerge
@@ -137,11 +148,13 @@
 
 ## Words
 
-- confidential
-    - adj. 机密的，秘密的
+- confidential [ˌkɑːnfɪˈdenʃl]
+    - adj. 机密的，保密的; 悄悄的
 - overlook
-    - 忽略
-    - == neglect
+    - vt. 忽略；（对于不良现象等）不予理会
+    - == neglect [nɪˈɡlekt]
+        - vt. 疏于照顾；不予重视
+        - n. 忽视
 
 ## 词组
 
