review: Unit20-2, 115-118, Unit21-1

--- a/english/word/low-frequency/115-118.md
+++ b/english/word/low-frequency/115-118.md
@@ -19,22 +19,27 @@
 
 ## 115
 
-- eradicate
+- eradicate [ɪˈrædɪkeɪt]
     - vt. 消灭
     - eradicate hunger 消灭饥饿
-- hybrid
+- hybrid [ˈhaɪbrɪd]
     - n. 混合物
 - undertake
     - vt. 承担
-    - == assume == shoulder == take
+    - == assume [əˈsuːm] vt. 假定，认为；承担（责任），接收；显露（特征），呈现
+    - == shoulder
+        - v. 承担；承当
+        - n. 肩膀
+    - == take
 - weaken
     - v. 减弱，削弱
-- ventilation
+- ventilation [ˌvɛntəˈleɪʃən]
     - n. 通风
-- provisional
+- provisional [prəˈvɪʒənəl]
     - adj. 临时的
-    - == temporary
-    - Something provisional is **temporary**, in the sense that it's only valid for a while.
+    - == temporary adj. 临时的
+    - Something **provisional** is **temporary**, in the sense that it's only valid for a while.
+        - in the sense that... 从...这个意义上说/也就是说
 - casualty [ˈkæʒuəlti]
     - n. 受害者
     - Small shops have been a **casualty** of the recession.
@@ -42,48 +47,54 @@
         - cause
             - v. 导致
             - n. 原因
-- fuse
+- fuse [fjuːz]
     - v. （使）融合
-- expedition
+- expedition [ˌekspəˈdɪʃn]
     - n. (为特定目的而组织的)旅行
-    - == journey
-    - journey to the west 西游记 //TODO?
-- insulate
-    - vt. 使绝缘
+    - == journey [ˈdʒɜːrni] n. 旅行，行程
+    - Journey to the West 西游记
+- insulate [ˈɪnsəleɪt]
+    - vt. 使绝缘；使隔热；使隔音
 
 ## 116
 
-- petition
+- petition [pəˈtɪʃn]
     - v. （向...）请愿，正式请求
     - n. 请愿书
-- prophet
+- prophet [ˈprɑːfɪt]
     - n. 先知
-- scenario
+- scenario [səˈnærioʊ]
     - n. 设想
-- sway
-    - vt. 影响；
+- sway [sweɪ]
+    - vt. 影响
     - v. 摇摆
     - n. 摇摆，影响
-    - == influenced
+    - == influence
+        - vt. 影响
+        - n. 影响；影响力；有影响的人（或事物）
     - Climate change teaching in some schools can be **swayed** by external forces.
+        - teaching n. 教学; 学说; 教育
 - transport
-    - vt. 使产生身临其境的感觉
-- volatile
-    - adj. 不稳定
-    - == unstable
-- vicinity
+    - vt. 使产生身临其境的感觉；运输
+    - n. 运输；运载工具
+- volatile [ˈvɑːlətl]
+    - adj. 不稳定的
+    - == unstable adj. 不稳固的; 不坚定的; 易变的; 反复无常的
+- vicinity [vəˈsɪnəti]
     - n. 周围地区
     - There is no hospital in the immediate **vicinity**.
-        - in the immediate vicinity 在非常近的地方／就在附近
-            - == nearby
+        - immediate [ɪˈmiːdiət] adj. 立即的，即刻的；直接的；紧靠的
+        - 词组
+            - in the immediate vicinity 在非常近的地方／就在附近
+                - == nearby
 - determinant
     - n. 决定因素
-- dissociate
+- dissociate [dɪˈsoʊʃieɪt]
     - vt. 使脱离
     - associate [əˈsəʊʃieɪt]
-        - v.支持；联想，联系
+        - v. 支持；联想，联系
         - be associate with 与...有关系
-- gauge
+- gauge [ɡeɪdʒ]
     - n. 测量仪表
     - a gauge of risk 衡量风险的指标
 
@@ -94,26 +105,27 @@
     - == summary [ˈsʌməri]
         - n. 摘要，概要; 总结，一览
         - adj. 概括的，总结的; 即刻的，立即的
-- suboptimal
+- suboptimal ['sʌb'ɒptɪməl]
     - adj. 次优的
-- underscore
+- underscore [ˌʌndərˈskɔ(r)]
     - vt. 划线于...下；强调，突出
     - underline/underscore the importance of... 强调...的重要性
-- cumulative
+- cumulative [ˈkjuːmjəleɪtɪv]
     - adj. 累积的
-- disastrous
+- disastrous [dɪˈzæstrəs]
     - adj. 灾难性的
-- erode
+- erode [ɪˈroʊd]
     - v. 侵蚀；损害
-- humidity
+- humidity [hjuːˈmɪdəti]
     - n. 湿度；潮湿
-- indignant
+- indignant [ɪnˈdɪɡnənt]
     - adj. 愤怒的
     - Feelings of *righteous([ˈraɪtʃəs] adj. 正义的)* indignation, it seems, are not the preserve of people alone.
+        - reserved for 专门留给...的/非普遍共享的
         - preserve n. an area, quality, or activity reserved for a particular group
         - the preserve of 独有/专属
             - == the exclusive domain of
-- obsolete
+- obsolete [ˌɑːbsəˈliːt]
     - adj. 废弃的；过时了的
     - As technology advances and a format becomes **obsolete**, the object is useless.
 - optional
@@ -121,28 +133,39 @@
 
 ## 118
 
-- parameter
+- parameter [pəˈræmɪtər]
     - n. 参数
-- pirate
+- pirate [ˈpaɪrət]
     - vt. 盗用，非法盗印
     - n. 非法盗印者
-    - But the age of streaming has been a <ins>boon([buːn] n. 非常有用的东西; 益处)</ins> for some unintended winners:
+    - But the age of streaming has been a *boon([buːn] n. 非常有用的东西; 益处)* for some unintended winners:
       **pirates** that use software to rip a film or television show in seconds from legitimate online video
-      platforms...
-- pitch
+      platforms... 但流媒体时代却意外地成了一些“非预期赢家”的福音——那些利用软件在几秒钟内就能从正规在线视频平台扒下电影或电视剧的盗版者
+        - unintended [ˌʌnɪnˈtɛndɪd] adj. 非故意的，无意识的
+        - legitimate [lɪˈdʒɪtɪmət] adj. 合法的；正当合理的
+        - rip [rɪp]
+            - v. to copy digital media from a CD, DVD, or online source
+            - v. 扯破，撕破
+            - n. 裂口
+- pitch [pɪtʃ]
     - vt. 投掷
     - n. 程度
-- ponder
+- ponder [ˈpɑːndər]
     - v. 思索，考虑，沉思
-- resilient
+- resilient [rɪˈzɪljənt]
     - adj. 有适应力的
-    - **Resilience** is very different than being numb. **Resilience** means you experience, you feel, you fail, you
-      hurt. You fall. But, you keep going.
-- retrieve
+    - resilience [rɪˈzɪliəns]
+        - n. 韧性
+        - **Resilience** is very different than being numb. **Resilience** means you experience, you feel, you fail, you
+          hurt. You fall. But you keep going.
+            - numb [nʌm]
+                - adj. 麻木的; 迟钝的
+                - v. 使麻木
+- retrieve [rɪˈtriːv]
     - vt. 取回
 - submerge
     - vi. 潜入水中
-- mute
+- mute [mjuːt]
     - vi. 减弱；缓解
     - adj. 沉默的，无声的
 
