--- a/math/advanced-mathematics/single-variable_integral_calculus/concept.tex
+++ b/math/advanced-mathematics/single-variable_integral_calculus/concept.tex
@@ -104,21 +104,178 @@
             \end{cases}
         \]
         \item 含有第一类间断点和无穷间断点的函数$f(x)$在包含该间断点的区间内必没有原函数$F(x)$
+        \item 可导函数$F(x)$求导后的函数$F'(x) = f(x)$不一定是连续函数，也可能有震荡间断点
+        \[
+            \text{若}F(x)\text{处处可导} \Rightarrow F'(x)\begin{cases}
+                                                              \text{连续函数或含有震荡间断点的函数} \\
+                                                              \text{有介值性（达布性质）} \\
+                                                              \lim\limits_{x\to x_0}F'(x)\ \text{存在}
+                                                              \ \Longleftrightarrow\
+                                                              F'(x)\ \text{在 }x_0\text{ 处连续；} \\
+                                                              \neq 0 \ \Longrightarrow\ F(x)\ \text{单调}.
+            \end{cases}
+        \]
+        \item 导函数$f'(x)$性质
+        \begin{itemize}
+            \item 如果导函数$f'(x)$存在，当导函数在一点极限存在时，导函数在这一点必连续
+            \item 如果导函数在一点存在，则这一点一定不会是导函数的第一类间断点
+            \item 若$f(x)$可导，则$f'(x)$可能连续，也可能含有震荡间断点
+        \end{itemize}
     \end{enumerate}
 
     \subsection{定积分}
 
     \subsubsection{定义}
 
+    \begin{enumerate}
+        \item 概念：设函数 $f(x)$ 在区间 $[a,b]$ 上有界，在 $(a,b)$ 上任取 $n-1$ 个分点
+        $x_i \ (i = 1,2,3,\cdots,n-1)$，
+        定义 $x_0 = a$ 和 $x_n = b$，
+        且
+        \[
+            a = x_0 < x_1 < x_2 < \cdots < x_{n-1} < x_n = b,
+        \]
+        记
+        \[
+            \Delta x_k = x_k - x_{k-1}, \quad k = 1,2,3,\cdots,n,
+        \]
+        并任取一点
+        \[
+            \xi_k \in [x_{k-1}, x_k],
+        \]
+        记
+        \[
+            \lambda = \max_{1 \leq k \leq n} \{ \Delta x_k \},
+        \]
+        若当 $\lambda \to 0$ 时，极限
+        \[
+            \lim_{\lambda \to 0} \sum_{k=1}^{n} f(\xi_k)\,\Delta x_k
+        \]
+        存在且与分点 $x_i$ 及点 $\xi_k$ 的取法无关，
+        则称函数 $f(x)$ 在区间 $[a,b]$ 上\textbf{可积}，即
+        \[
+            \int_a^b f(x)\,\mathrm{d}x
+            =
+            \lim_{\lambda \to 0} \sum_{k=1}^{n} f(\xi_k)\,\Delta x_k.
+        \]
+        \begin{circlenum}
+            \item 分隔: 分隔方法不唯一，只要分成$n$份即可
+            \item 近似: $f(\xi_k)$
+            \item 求和
+            \item 取极限
+        \end{circlenum}
+        \item 几何意义
+        \begin{itemize}
+            \item 若$f(x) \geq 0$，定积分$\int_a^b f(x)\,\mathrm{d}x$表示面积
+            \item 若$f(x) \leq 0$，定积分$\int_a^b f(x)\,\mathrm{d}x$表示面积的{\color{red}{负值}}
+            \item 若$f(x)$有正有负，定积分$\int_a^b f(x)\,\mathrm{d}x$表示$x$轴上方图形的面积减去$x$轴下方图形的面积
+        \end{itemize}
+        \item 定积分的精确定义：当定积分存在时，存在两个 {\blueuline{任取}}：
+        分点 $x_i$ 任取，一点 $\xi_i \in (x_{i-1}, x_i)$ 任取，
+        故可做两个 {\color{red}{特取}}，
+        即将 $[a,b]$ $n$ 等分且取每个小区间的右端点为 $\xi_i$，即
+        \[
+            \int_a^b f(x)\,\mathrm{d}x
+            =
+            \lim_{n \to \infty}
+            \sum_{i=1}^{n}
+            f\!\left(a + \frac{b-a}{n} i\right)
+            \frac{b-a}{n}
+        \]
+        若将式子中的 $a,b$ 特殊化为 $0,1$ 这两个数，即
+        \[
+            \int_0^1 f(x)\,\mathrm{d}x
+            =
+            \lim_{n \to \infty}
+            \sum_{i=1}^{n}
+            f\!\left(\frac{i}{n}\right)
+            \frac{1}{n}.
+        \]
+        \item 定积分的值与字母无关：定积分的值只与被积函数及积分区间有关，而与积分变量的记法无关
+        \[
+            \int_a^b f(x)\,\mathrm{d}x = \int_a^b f(t)\,\mathrm{d}t = \int_a^b f(u)\,\mathrm{d}u
+        \]
+    \end{enumerate}
+
     \subsubsection{存在定理}
+
+    \begin{enumerate}
+        \item 定积分存在的充分条件
+        \begin{circlenum}
+            \item 若$f(x)$在$[a, b]$上连续，则$\int_a^b f(x)\,\mathrm{d}x$存在
+            \item 若$f(x)$在$[a, b]$上单调（{\color[rgb]{0.2, 0.6, 0.3}{$f(a), f(b)$即为函数的界，对任意$x\in (a, b)$，$f(x)$一定介于$f(a), f(b)$之间}}），则$\int_a^b f(x)\,\mathrm{d}x$存在
+            \item 若$f(x)$在$[a, b]$上有界，且只有有限个间断点（{\color[rgb]{0.2, 0.6, 0.3}{不包含无穷间断点}}），则$\int_a^b f(x)\,\mathrm{d}x$存在
+            \item 若$f(x)$在$[a, b]$上有有限个第一类间断点，则$\int_a^b f(x)\,\mathrm{d}x$存在
+        \end{circlenum}
+        \item 定积分存在的必要条件: 可积函数必有界。即若定积分$\int_a^b f(x)\,\mathrm{d}x$存在，则$f(x)$在$[a, b]$上必有界
+    \end{enumerate}
 
     \subsubsection{性质（假设以下积分均存在）}
 
+    \begin{enumerate}
+        \item 当$b = a$时，$\int_a^b f(x)\,\mathrm{d}x = 0$
+        \item 当$a > b$时，$\int_a^b f(x)\,\mathrm{d}x = -\int_b^a f(x)\,\mathrm{d}x$
+        \item 求区间长度：假设$a<b$，则$\int_a^b \mathrm{d}x = b-a = L$，其中$L$为区间$[a, b]$的长度
+        \item 积分的线性性质：设$k_1, k_2$为常数，则$\int_a^b [k_{1}f(x)\pm k_{2}g(x)]\,\mathrm{d}x = k_{1}\int_a^b f(x)\,\mathrm{d}x \pm k_{2}\int_a^b g(x)\,\mathrm{d}x$
+        \item 积分的可加（拆）性：无论$a, b, c$的大小如何，总有$\int_a^b f(x)\,\mathrm{d}x = \int_a^c f(x)\,\mathrm{d}x + \int_c^b f(x)\,\mathrm{d}x$
+        \item 积分的保号性：若在区间$[a, b]$上$f(x) \leq g(x)$，则有$\int_a^b f(x)\,\mathrm{d}x \leq \int_a^b g(x)\,\mathrm{d}x$。特殊地，有
+        \[
+            \left| \int_a^b f(x)\,\mathrm{d}x \right|
+            \le
+            \int_a^b |f(x)|\,\mathrm{d}x.
+        \]
+        \item 设$f(x)$是$[a, b]$上非负的连续函数，只要$f(x)${\color{red}{不恒等于零}}，则必有
+        \[
+            \int_a^b f(x)\,\mathrm{d}x > 0
+        \]
+        \item 估值定理：设$M, m$分别是$f(x)$在$[a, b]$上的最大值和最小值，$L$为区间$[a, b]$的长度，则有
+        \[
+            \int_a^b m\,\mathrm{d}x = mL \leq \int_a^b f(x)\,\mathrm{d}x \leq ML = \int_a^b M\,\mathrm{d}x
+        \]
+        \item $\color{red}{\bigstar}$积分中值定理：若函数$f(x)$在区间$[a, b]$上连续，则至少存在一点$\xi \in [a, b]$，使$\int_a^b f(x)\,\mathrm{d}x = f(\xi)(b - a)$
+    \end{enumerate}
+
     \subsection{变限积分}
+
+    本质是一个由定积分定义的函数
 
     \subsubsection{概念}
 
+    当 $x$ 在区间 $[a,b]$ 上变动时，对应于每一个 $x$ 值，积分$\int_a^x f(t)\,\mathrm{d}t$都有一个确定的值，因此$\int_a^x f(t)\,\mathrm{d}t$是一个关于$x$的函数，记作
+    \[
+        F(x)=\int_a^x f(t)\,\mathrm{d}t \quad (a \le x \le b)
+    \]
+    称函数 $F(x)$ 为变上限的定积分。同理，可以定义变下限的定积分以及上、下限都变化的定积分，这些统称为\textbf{变限积分}。事实上，变限积分就是定积分的推广。
+
     \subsubsection{性质}
+
+    \begin{enumerate}
+        \item 函数$f(x)$在$I$上\textbf{可积}，则函数$F(x) = \int_a^x f(t)\,\mathrm{d}t$在$I$上连续（$F(x)$若存在，则其一定连续。与$f(x)$作区分：$f(x)$存在但其不一定连续)
+        \item $\color{red}{\bigstar}$函数$f(x)$在$I$上\textbf{连续}，则函数$F(x) = \int_a^x f(t)\,\mathrm{d}t$在$I$上可导且$F'(x) = f(x)$
+        \item 设 $F(x)=\int_a^x f(t)\,\mathrm{d}t$，则有：
+        \begin{itemize}
+            \item 若 $x=x_0\in I$ 是 $f(x)$ {\blueuline{唯一的跳跃间断点}}，
+            则函数 $F(x)$ 在 $x_0$ 处不可导，且
+            \[
+                \begin{cases}
+                    F'_-(x_0)=\lim\limits_{x\to x_0^-} f(x),\\
+                    F'_+(x_0)=\lim\limits_{x\to x_0^+} f(x).
+                \end{cases}
+            \]
+
+            \item 若 $x=x_0\in I$ 是 $f(x)$ {\blueuline{唯一的可去间断点}}，
+            则函数 $F(x)$ 在 $x_0$ 处
+                {\color[rgb]{0.2,0.6,0.3}{可导}}，
+            且
+            \[
+                F'(x_0)=\lim\limits_{x\to x_0} f(x)\ne f(x_0).
+            \]
+
+            \item 上述两种情形中，$F(x)$ 不是 $f(x)$ 的原函数，
+            而是变限积分，
+            因为第一类间断点的函数不存在原函数
+        \end{itemize}
+    \end{enumerate}
 
     \subsection{反常积分}
 
@@ -134,13 +291,12 @@
     \subsection{结论}
 
     \begin{enumerate}
+        \item $f(x)$可导 $\Rightarrow$ 连续 $\Rightarrow$ 可积 $\Rightarrow$ 有界
     \end{enumerate}
 
     \subsection{定理}
 
     \begin{enumerate}
-        \item 积分中值定理：若函数$f(x)$在区间$[a, b]$上连续，则至少存在一点$\xi \in [a, b]$，使$\int_a^b f(x)\,\mathrm{d}x = f(\xi)(b - a)$
-        \item 介值定理：
     \end{enumerate}
 
     \subsection{运算}
@@ -196,6 +352,96 @@
         \item $\int f(x)\,\mathrm{d}x$称为不定积分，表示全体原函数
         \item $\int_a^b f(x)\,\mathrm{d}x$称为定积分，表示面积
         \item $F(x) = \int_a^x f(t)\,\mathrm{d}t$称为变上限积分，表示动态的面积
+        \item 证明：函数$f(x)$在$I$上\textbf{可积}，则函数$F(x) = \int_a^x f(t)\,\mathrm{d}t$在$I$上连续（$F(x)$若存在，则其一定连续。与$f(x)$作区分：$f(x)$存在但其不一定连续)
+        \begin{analysisbox}[证]
+            对任意 $x$，若 $x+\Delta x \in I$，有
+            \[
+                F(x+\Delta x)-F(x)
+                =
+                \int_x^{x+\Delta x} f(t)\,\mathrm{d}t.
+            \]
+
+            由可积的必要条件可知，存在 $M>0$，使得在 $I$ 上有
+            \[
+                |f(x)| \le M.
+            \]
+            因此，
+            \[
+                0 \le \bigl| F(x+\Delta x)-F(x) \bigr|
+                \le
+                M\,|\Delta x|.
+            \]
+
+            当 $\Delta x \to 0$ 时，
+            \[
+                \lim_{\Delta x \to 0}
+                \bigl[ F(x+\Delta x)-F(x) \bigr]
+                =
+                0,
+            \]
+            即
+            \[
+                \lim_{\Delta x \to 0} F(x+\Delta x) = F(x).
+            \]
+
+            根据函数在 $x$ 点连续的充要条件，
+            $F(x)$ 在 $x$ 点连续。
+
+            由此可见，对于变限积分
+            \[
+                F(x)=\int_a^x f(t)\,\mathrm{d}t
+            \]
+            只要它存在，就必然是连续的
+        \end{analysisbox}
+        \item 证明：函数$f(x)$在$I$上\textbf{连续}，则函数$F(x) = \int_a^x f(t)\,\mathrm{d}t$在$I$上可导且$F'(x) = f(x)$
+        \begin{analysisbox}[证]
+            对任意的 $x$，若 $x+\Delta x \in I$，
+            由于函数 $f(x)$ 在区间 $I$ 上连续，因此
+            \[
+                \begin{aligned}
+                    \lim_{\Delta x \to 0}\frac{F(x+\Delta x)-F(x)}{\Delta x}
+                    &= \lim_{\Delta x \to 0}
+                    \frac{\left(
+                        \displaystyle\int_a^{x+\Delta x} f(t)\,\mathrm{d}t
+                        -
+                        \displaystyle\int_a^{x} f(t)\,\mathrm{d}t
+                        \right)}{\Delta x} \\
+                    &= \lim_{\Delta x \to 0}
+                    \frac{\displaystyle\int_x^{x+\Delta x} f(t)\,\mathrm{d}t}{\Delta x}
+                \end{aligned}
+            \]
+
+            由积分中值定理，存在
+            \[
+                \xi \in (x,\,x+\Delta x),
+            \]
+            使得
+            \[
+                \int_x^{x+\Delta x} f(t)\,\mathrm{d}t
+                =
+                f(\xi)\,\Delta x.
+            \]
+            因此，
+            \[
+                \lim_{\Delta x \to 0}
+                \frac{F(x+\Delta x)-F(x)}{\Delta x}
+                =
+                \lim_{\Delta x \to 0} f(\xi).
+            \]
+
+            由于 $\xi \to x$ 且 $f(x)$ 连续，故
+            \[
+                \lim_{\Delta x \to 0} f(\xi) = f(x).
+            \]
+
+            由此可见，如果函数 $f(x)$ 在区间 $I$ 上连续，
+            则
+            \[
+                F(x)=\int_a^x f(t)\,\mathrm{d}t
+            \]
+            是 $f(x)$ 在区间 $I$ 上的一个原函数。
+
+        \end{analysisbox}
     \end{enumerate}
 
 \end{document}
