feat: update advanced mathematics notes

--- a/math/advanced-mathematics/single-variable_differential_calculus/applications.tex
+++ b/math/advanced-mathematics/single-variable_differential_calculus/applications.tex
@@ -97,7 +97,7 @@
         f(\xi) = \frac{f(x_1) + f(x_2) + \cdots + f(x_n)}{n}
     \]
 
-    \subsubsection{零点定理（介质定理的特例）}
+    \subsubsection{零点定理（介值定理的特例）}
 
     设 $f(x)$ 在 $[a, b]$上连续，当$f(a)\cdot f(b) < 0$时，存在$\xi \in (a, b)$，使得$f(\xi) = 0$
     \begin{itemize}
