--- a/math/advanced-mathematics/foundations/inequality.tex
+++ b/math/advanced-mathematics/foundations/inequality.tex
@@ -124,7 +124,7 @@
         \item 若 $0 < a < x < b, 0 < c < y < d$，则$\displaystyle\frac{c}{b} < \frac{y}{x} < \frac{d}{a}$
         \item $\displaystyle\frac{2}{\pi}x < \sin x < x < \tan x,\quad x \in \left(0,\displaystyle\frac{\pi}{2}\right)$
         \item $\sin x < x, \quad x > 0$
-        \item 当 $0 < x < \displaystyle\frac{\pi}{4}$时，$x < \tan x < \displaystyle\frac{4}{\pi}x$
+        \item $\color{red}{\bigstar}$当 $0 < x < \displaystyle\frac{\pi}{4}$时，$x < \tan x < \displaystyle\frac{4}{\pi}x$
         \item $\arctan x \leq x \leq \arcsin x, \quad 0 \leq x \leq 1$
         \item $e^x \geq x + 1, \quad x\text{为任意值}$
         \item $x > 0$时，$\color{red}{x - 1 \geq \ln x}\;$或$\;x \geq \ln x + 1$
