--- a/math/advanced-mathematics/single-variable_integral_calculus/concept.tex
+++ b/math/advanced-mathematics/single-variable_integral_calculus/concept.tex
@@ -116,11 +116,12 @@
             \end{cases}
         \]
         \item 导函数$f'(x)$性质
-        \begin{itemize}
-            \item 如果导函数$f'(x)$存在，当导函数在一点极限存在时，导函数在这一点必连续
+        \begin{circlenum}
+            \item 有介值性
             \item 如果导函数在一点存在，则这一点一定不会是导函数的第一类间断点
+            \item 如果导函数$f'(x)$存在，当导函数在一点极限存在时，导函数在这一点必连续
             \item 若$f(x)$可导，则$f'(x)$可能连续，也可能含有震荡间断点
-        \end{itemize}
+        \end{circlenum}
     \end{enumerate}
 
     \subsection{定积分}
@@ -159,7 +160,7 @@
             \lim_{\lambda \to 0} \sum_{k=1}^{n} f(\xi_k)\,\Delta x_k.
         \]
         \begin{circlenum}
-            \item 分隔: 分隔方法不唯一，只要分成$n$份即可
+            \item 分割: 分割方法不唯一，只要分成$n$份即可
             \item 近似: $f(\xi_k)$
             \item 求和
             \item 取极限
@@ -184,12 +185,17 @@
         \]
         若将式子中的 $a,b$ 特殊化为 $0,1$ 这两个数，即
         \[
-            \int_0^1 f(x)\,\mathrm{d}x
+                {\color{red}{\bigstar}}\int_0^1 f(x)\,\mathrm{d}x
             =
             \lim_{n \to \infty}
             \sum_{i=1}^{n}
             f\!\left(\frac{i}{n}\right)
-            \frac{1}{n}.
+            \frac{1}{n}
+            =
+            \lim_{n \to \infty}
+            \sum_{i=1}^{n}
+            f\!\left(\frac{2i - 1}{2n}\right)
+            \frac{1}{n}
         \]
         \item 定积分的值与字母无关：定积分的值只与被积函数及积分区间有关，而与积分变量的记法无关
         \[
@@ -228,6 +234,12 @@
         \[
             \int_a^b f(x)\,\mathrm{d}x > 0
         \]
+        \begin{itemize}
+            \item 推论：若连续函数$f(x), g(x)$满足$f(x) \geq g(x)$，且$f(x)$不恒等于$g(x)$，有$a < b$，则必有
+            \[
+                \int_a^b f(x)\,\mathrm{d}x > \int_a^b g(x)\,\mathrm{d}x
+            \]
+        \end{itemize}
         \item 估值定理：设$M, m$分别是$f(x)$在$[a, b]$上的最大值和最小值，$L$为区间$[a, b]$的长度，则有
         \[
             \int_a^b m\,\mathrm{d}x = mL \leq \int_a^b f(x)\,\mathrm{d}x \leq ML = \int_a^b M\,\mathrm{d}x
@@ -250,12 +262,12 @@
     \subsubsection{性质}
 
     \begin{enumerate}
-        \item 函数$f(x)$在$I$上\textbf{可积}，则函数$F(x) = \int_a^x f(t)\,\mathrm{d}t$在$I$上连续（$F(x)$若存在，则其一定连续。与$f(x)$作区分：$f(x)$存在但其不一定连续)
+        \item 函数$f(x)$在$I$上\textbf{可积}，则函数$F(x) = \int_a^x f(t)\,\mathrm{d}t$在$I$上\textbf{连续}（$F(x)$若存在，则其一定连续。与$f(x)$作区分：$f(x)$存在但其不一定连续)
         \item $\color{red}{\bigstar}$函数$f(x)$在$I$上\textbf{连续}，则函数$F(x) = \int_a^x f(t)\,\mathrm{d}t$在$I$上可导且$F'(x) = f(x)$
         \item 设 $F(x)=\int_a^x f(t)\,\mathrm{d}t$，则有：
         \begin{itemize}
             \item 若 $x=x_0\in I$ 是 $f(x)$ {\blueuline{唯一的跳跃间断点}}，
-            则函数 $F(x)$ 在 $x_0$ 处不可导，且
+            则函数 $F(x)$ 在 $x_0$ 处{\color[rgb]{0.2,0.6,0.3}{不可导}}，且
             \[
                 \begin{cases}
                     F'_-(x_0)=\lim\limits_{x\to x_0^-} f(x),\\
@@ -264,9 +276,7 @@
             \]
 
             \item 若 $x=x_0\in I$ 是 $f(x)$ {\blueuline{唯一的可去间断点}}，
-            则函数 $F(x)$ 在 $x_0$ 处
-                {\color[rgb]{0.2,0.6,0.3}{可导}}，
-            且
+            则函数 $F(x)$ 在 $x_0$ 处{\color[rgb]{0.2,0.6,0.3}{可导}}，且
             \[
                 F'(x_0)=\lim\limits_{x\to x_0} f(x)\ne f(x_0).
             \]
@@ -281,7 +291,106 @@
 
     \subsubsection{概念}
 
+    定积分有两个必要条件：一是积分区间有限，二是被积函数有界。如果破坏了积分区间的有限性，就引出\textbf{无穷区间}上的反常积分；如果破坏了被积函数的有界性，就引出了\textbf{无界函数}的反常积分
+
+    \begin{enumerate}
+        \item \textbf{无穷区间}上反常积分的概念与敛散性：设$F(x)$是$f(x)$在相应区间上的一个原函数
+        \begin{circlenum}
+            \item \[
+                      \int_a^{+\infty} f(x)\,\mathrm{d}x = \lim_{x\to +\infty} F(x) - F(a)
+            \]
+            若上述极限存在，则称反常积分收敛，否则称发散
+            \item \[
+                      \int_{-\infty}^{b} f(x)\,\mathrm{d}x = F(b) - \lim_{x\to -\infty} F(x)
+            \]
+            若上述极限存在，则称反常积分收敛，否则称发散
+            \item \[
+                      \int_{-\infty}^{+\infty} f(x)\,\mathrm{d}x = \int_{-\infty}^{x_0} f(x)\,\mathrm{d}x + \int_{x_0}^{+\infty} f(x)\,\mathrm{d}x
+            \]
+            若右端两个积分都收敛，则称反常积分收敛，\textbf{否则}称发散
+        \end{circlenum}
+        \item 瑕点：使$f(x)$在$x_0$的邻域内\textbf{无界}的点即为\textbf{瑕点}。如：
+        \begin{itemize}
+            \item $\lim\limits_{x\to 0} \displaystyle\frac{1}{x} = \infty$，$x = 0$为瑕点
+            \item $\lim\limits_{x\to 0} \displaystyle\frac{1}{x} \sin \displaystyle\frac{1}{x} = \text{无界震荡}$，$x = 0$为瑕点
+        \end{itemize}
+        \item \textbf{无界函数}的反常积分的概念与敛散性：设$F(x)$是$f(x)$在相应区间上的一个原函数，$x_0$为$f(x)$的瑕点
+        \begin{circlenum}
+            \item 若$x = a$是唯一瑕点，则
+            \[
+                \int_a^b f(x)\,\mathrm{d}x = F(b) - \lim_{x\to a^+} F(x)
+            \]
+            若上述极限存在，则称反常积分收敛，否则称发散
+            \item 若$x = b$是唯一瑕点，则
+            \[
+                \int_a^b f(x)\,\mathrm{d}x = \lim_{x\to b^-} F(x) - F(a)
+            \]
+            若上述极限存在，则称反常积分收敛，否则称发散
+            \item 若$x = c \in (a, b)$是唯一瑕点，则
+            \[
+                \int_a^b f(x)\,\mathrm{d}x = \int_a^c f(x)\,\mathrm{d}x + \int_c^b f(x)\,\mathrm{d}x
+            \]
+            若右端两个积分都收敛，则称反常积分收敛，否则称发散
+        \end{circlenum}
+        \item 在反常积分中，一般把$\mathbf{\infty}$和\textbf{瑕点}统称为\textbf{奇点}
+        \item 在判别积分敛散性时，{\blueuline{一个积分中只能有一个奇点}}，若出现两个及以上奇点，需拆分
+    \end{enumerate}
+
     \subsubsection{敛散性的判别法}
+
+    \begin{enumerate}
+        \item 无穷区间
+        \begin{itemize}
+            \item 比较判别法（{\color{red}{放缩法}}）：设函数$f(x), g(x)$在区间$[a, +\infty)$上连续，并且${\color{red}{0 \leq f(x) \leq g(x)}}(a \leq x \leq +\infty)$，则
+            \begin{circlenum}
+                \item 当$\int_a^{+\infty} g(x)\,\mathrm{d}x$收敛时，$\int_a^{+\infty} f(x)\,\mathrm{d}x$收敛
+                \item 当$\int_a^{+\infty} f(x)\,\mathrm{d}x$发散时，$\int_a^{+\infty} g(x)\,\mathrm{d}x$发散
+            \end{circlenum}
+            \item $\color{red}{\bigstar}$比较判别法的极限形式（{\color{red}{计算法$\displaystyle\frac{0}{0}$}}）：设函数$f(x), g(x)$在区间$[a, +\infty)$上连续，且$f(x) \geq 0, g(x) > 0, {\color{red}{\lim\limits_{x\to +\infty} \displaystyle\frac{f(x)}{g(x)} = \lambda}}$（有限或$\infty$）（$\displaystyle\frac{0}{0}$型），则
+            \begin{circlenum}
+                \item 当$\lambda \neq 0$且$\lambda \neq \infty$时（\textbf{$f(x), g(x)$同阶无穷小}），$\int_a^{+\infty} f(x)\,\mathrm{d}x$与$\int_a^{+\infty} g(x)\,\mathrm{d}x$有相同的敛散性
+                \item 当$\lambda = 0$时（\textbf{$f(x)$趋于$0$的速度比$g(x)$更快}），若$\int_a^{+\infty} g(x)\,\mathrm{d}x$收敛，则$\int_a^{+\infty} f(x)\,\mathrm{d}x$收敛
+                \item 当$\lambda = \infty$时（\textbf{$g(x)$趋于$0$的速度比$f(x)$更快}），若$\int_a^{+\infty} g(x)\,\mathrm{d}x$发散，则$\int_a^{+\infty} f(x)\,\mathrm{d}x$发散
+            \end{circlenum}
+        \end{itemize}
+        \item 无界函数
+        \begin{itemize}
+            \item 比较判别法（{\color{red}{放缩法}}）：设$f(x), g(x)$在$(a, b]$上连续，瑕点同为$x = a$，并且${\color{red}{0 \leq f(x) \leq g(x)}}(a < x \leq b)$，则
+            \begin{circlenum}
+                \item 当$\int_a^{b} g(x)\,\mathrm{d}x$收敛时，$\int_a^{b} f(x)\,\mathrm{d}x$收敛
+                \item 当$\int_a^{b} f(x)\,\mathrm{d}x$发散时，$\int_a^{b} g(x)\,\mathrm{d}x$发散
+            \end{circlenum}
+            \item 比较判别法的极限形式（{\color{red}{计算法$\displaystyle\frac{\infty}{\infty}$}}）：设$f(x), g(x)$在$(a, b]$上连续，瑕点同为$x = a$，并且$f(x) \geq 0, g(x) > 0(a < x \leq b), {\color{red}{\lim\limits_{x\to a^+} \displaystyle\frac{f(x)}{g(x)} = \lambda}}$（有限或$\infty$）（$\displaystyle\frac{\infty}{\infty}$型），则
+            \begin{circlenum}
+                \item 当$\lambda \neq 0$且$\lambda \neq \infty$时（\textbf{$f(x), g(x)$同阶无穷大}），$\int_a^{b} f(x)\,\mathrm{d}x$与$\int_a^{b} g(x)\,\mathrm{d}x$有相同的敛散性
+                \item 当$\lambda = 0$时（\textbf{$g(x)$趋于$\infty$的速度比$f(x)$更快}），若$\int_a^{b} g(x)\,\mathrm{d}x$收敛，则$\int_a^{b} f(x)\,\mathrm{d}x$收敛
+                \item 当$\lambda = \infty$时（\textbf{$f(x)$趋于$\infty$的速度比$g(x)$更快}），若$\int_a^{b} g(x)\,\mathrm{d}x$发散，则$\int_a^{b} f(x)\,\mathrm{d}x$发散
+            \end{circlenum}
+        \end{itemize}
+        \item 两个重要结论（$p$ 型广义积分）
+        \begin{circlenum}
+            \item 在 $(0,1]$ 上，$p$越小越收敛
+            \[
+                \int_{{\color{red}{0}}}^1 \frac{1}{x^p}\,\mathrm{d}x, \int_0^1 \frac{\ln x}{x^p}\,\mathrm{d}x \begin{cases}
+                                                                                                                  \text{收敛}, \qquad \color{red}{0 < p < 1}, \\
+                                                                                                                  \text{发散}, \qquad p \geq 1
+                \end{cases}
+
+            \]
+            盯着$x\to 0^+$看
+            \item 在 $[1,+\infty)$ 上，$p$越大越收敛
+            \[
+                \int_1^{{\color{red}{+\infty}}} \frac{1}{x^p}\,\mathrm{d}x, \int_1^{+\infty} \frac{\ln x}{x^p}\,\mathrm{d}x \begin{cases}
+                                                                                                                                \text{收敛}, \qquad \color{red}{p > 1}, \\
+                                                                                                                                \text{发散}, \qquad p \leq 1
+                \end{cases}
+
+            \]
+            盯着$x\to +\infty$看
+            \item 当$x\to 0^+$时，$\sin x \sim x$，即$\lim\limits_{x\to 0^+} \displaystyle\frac{\sin^p x}{x^p} = 1$，故$\int_0^1 \displaystyle\frac{1}{\sin^p x}\,\mathrm{d}x$依然满足\ding{172}
+            \item 若$f(x)\sim x^\alpha \quad (x\to 0^+ \text{ 或 } +\infty)$，则$\int \displaystyle\frac{1}{f^p(x)}\,\mathrm{d}x \sim \int \displaystyle\frac{1}{x^{\alpha p}}\,\mathrm{d}x$
+        \end{circlenum}
+    \end{enumerate}
 
     \subsection{基础概念}
 
@@ -292,6 +401,46 @@
 
     \begin{enumerate}
         \item $f(x)$可导 $\Rightarrow$ 连续 $\Rightarrow$ 可积 $\Rightarrow$ 有界
+        \item $\sin x$和$\cos x$ 一拱面积为2
+        \item $\int_0^{\frac{\pi}{2}} f(\sin x)\,\mathrm{d}x == \int_0^{\frac{\pi}{2}} f(\cos x)\,\mathrm{d}x$
+        \item 当$f(x)$是偶函数且$\int_0^{+\infty} f(x)\,\mathrm{d}x$收敛时，$\int_{-\infty}^{+\infty} f(x)\,\mathrm{d}x = 2\int_0^{+\infty} f(x)\,\mathrm{d}x$
+        \item 当$f(x)$是奇函数且$\int_0^{+\infty} f(x)\,\mathrm{d}x$收敛时，$\int_{-\infty}^{+\infty} f(x)\,\mathrm{d}x = 0$
+        \item 设$f(x)$连续，且$\int_a^{+\infty} |f(x)|\,\mathrm{d}x$收敛，则$\int_a^{+\infty} |f(x)|\,\mathrm{d}x$收敛
+        \begin{analysisbox}[证:]
+            因为
+            \[
+                0 \le f(x)+|f(x)| \le 2|f(x)|.
+            \]
+
+            又
+            \[
+                \int_a^{+\infty} |f(x)|\,\mathrm{d}x
+            \]
+            收敛，根据比较判别法，
+            \[
+                \int_a^{+\infty} \bigl(f(x)+|f(x)|\bigr)\,\mathrm{d}x
+            \]
+            也收敛。
+
+            又
+            \[
+                f(x)=\bigl(f(x)+|f(x)|\bigr)-|f(x)|,
+            \]
+            因此
+            \[
+                \int_a^{+\infty} f(x)\,\mathrm{d}x
+                =
+                \int_a^{+\infty} \bigl(f(x)+|f(x)|\bigr)\,\mathrm{d}x
+                -
+                \int_a^{+\infty} |f(x)|\,\mathrm{d}x.
+            \]
+
+            右端为两个收敛积分之差，故
+            \[
+                \int_a^{+\infty} f(x)\,\mathrm{d}x
+            \]
+            收敛。
+        \end{analysisbox}
     \end{enumerate}
 
     \subsection{定理}
@@ -314,13 +463,44 @@
     \subsection{方法总结}
 
     \begin{enumerate}
-
+        \item 凑定积分定义：分子分母若为$h(n, i)$，则$h(n, i)$是关于$n, i$的齐次式，即可凑成$f(\displaystyle\frac{i}{n})\cdot \displaystyle\frac{1}{n}$，若不是齐次式，考虑夹逼准则。
+        \begin{circlenum}
+            \item 先提出$\displaystyle\frac{1}{n}$
+            \item 再凑出$\displaystyle\frac{i}{n}$
+            \item $\displaystyle\int_0^1 f(x)\,\mathrm{d}x
+            =
+            \lim\limits_{n \to \infty}
+            \displaystyle\sum_{i=1}^{n}
+            f\!\left(\displaystyle\frac{i}{n}\right)
+            \displaystyle\frac{1}{n}
+            =
+            \lim\limits_{n \to \infty}
+            \displaystyle\sum_{i=1}^{n}
+            f\!\left(\displaystyle\frac{2i - 1}{2n}\right)
+            \displaystyle\frac{1}{n}$
+        \end{circlenum}
     \end{enumerate}
 
     \subsection{条件转换思路}
 
     \begin{enumerate}
+        \item 见到 $\int_a^b f(x)\,\mathrm{d}x$
+        \[
+            \begin{cases}
+                \text{用积分中值定理：}
+                & \displaystyle \int_a^b f(x)\,\mathrm{d}x = f(\xi)(b-a), \\[6pt]
+                \text{改成辅助函数：}
+                & \displaystyle \int_a^x f(t)\,\mathrm{d}t.
+            \end{cases}
+        \]
+    \end{enumerate}
 
+    \subsection{经典}
+
+    \begin{enumerate}
+        \item $f(x) = 2x\sin \displaystyle\frac{1}{x^2} - \displaystyle\frac{2}{x}\cos \displaystyle\frac{1}{x^2}$，$x = 0$是其震荡间断点，$\lim\limits_{x\to 0} f(x)$是\textbf{无界震荡}，其原函数是$F(x) = x^2 \sin \displaystyle\frac{1}{x^2}$
+        \item $f(x) = 2x\cos \displaystyle\frac{1}{x} + \sin \displaystyle\frac{1}{x}$，$x = 0$是其震荡间断点，$\lim\limits_{x\to 0} f(x)$是\textbf{有界震荡}，其原函数是$F(x) = x^2\cos \displaystyle\frac{1}{x}$
+        \item $\int_0^1 \ln x\,\mathrm{d}x$ 是收敛的（$\color{red}{\lim\limits_{x\to 0^+} x^{\epsilon}\ln x = 0, \epsilon > 0}$）
     \end{enumerate}
 
     \subsection{理解}
@@ -442,6 +622,38 @@
             是 $f(x)$ 在区间 $I$ 上的一个原函数。
 
         \end{analysisbox}
+        \item 设$f(x)$是$[a, b]$上非负的连续函数，且$f(x)${\color{red}{不恒等于零}}，证明必有$\int_a^b f(x)\,\mathrm{d}x > 0$
+        \begin{analysisbox}[证]
+            因函数 $f(x)$ 在 $[a,b]$ 上不恒等于零，且 $f(x)\ge 0$，
+            故至少存在一点 $x_0\in(a,b)$，使得
+            \[
+                f(x_0)>0.
+            \]
+
+            由连续函数的局部保号性知，
+            存在 $\delta>0$ 与 $\eta>0$，
+            使得当
+            \[
+                x\in[x_0-\delta,\;x_0+\delta]\subset[a,b]
+            \]
+            时，恒有
+            \[
+                f(x)\ge \eta>0.
+            \]
+
+            根据定积分的不等式性质，有
+            \[
+                \int_a^b f(x)\,dx
+                \ge
+                \int_{x_0-\delta}^{x_0+\delta} f(x)\,dx
+                \ge
+                \int_{x_0-\delta}^{x_0+\delta} \eta\,dx
+                =
+                2\delta\eta
+                >0.
+            \]
+        \end{analysisbox}
+
     \end{enumerate}
 
 \end{document}
