--- a/math/latex/template.tex
+++ b/math/latex/template.tex
@@ -15,6 +15,9 @@
 \usepackage{enumitem}
 \usepackage{pifont}
 \usepackage{ulem}
+\usepackage{mathtools}
+\usepackage{dsfont}
+\usepackage{extarrows}
 \pgfplotsset{compat=1.18}
 \geometry{left=3cm,right=3cm,top=3cm,bottom=3cm}
 
