--- a/english/word/low-frequency/097-102.md
+++ b/english/word/low-frequency/097-102.md
@@ -117,7 +117,7 @@
     - vt. 注射（药物）
 - competitiveness [kəm'petətɪvnəs]
     - n. 竞争力
-    - uncompetitive n. 无竞争力的
+    - uncompetitive adj. 无竞争力的
 - constructive
     - adj. 建设性的
 - hamper [ˈhæmpər]
@@ -158,7 +158,7 @@
     - == imagine [ɪˈmædʒɪn] vt. 想象；猜想 == envision vt. 设想
 - fantasise ['fæntəˌsaɪz]
     - v. 想象
-    - fantasy [ˈfæntəsi] n. 幻想；虚幻的
+    - fantasy [ˈfæntəsi] n. 幻想；虚幻
 
 ## 102
 
