--- a/math/advanced-mathematics/single-variable_differential_calculus/applications.tex
+++ b/math/advanced-mathematics/single-variable_differential_calculus/applications.tex
@@ -489,7 +489,7 @@
     \subsection{结论}
 
     \begin{enumerate}
-        \item 当$0 < x < \displaystyle\frac{\pi}{2}$时，$\displaystyle\frac{2x}{\pi} < \sin x < x$
+        \item 当$0 < x < \displaystyle\frac{\pi}{2}$时，$\displaystyle\frac{2x}{\pi} < \sin x < x < \tan x$
     \end{enumerate}
 
 
